--- a/GameSettings/MVVM/Pages/LeaguePage.xaml
+++ b/GameSettings/MVVM/Pages/LeaguePage.xaml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GameSettings.MVVM.Pages.LeaugePage"
+             x:Class="GameSettings.MVVM.Pages.LeaguePage"
+             xmlns:ViewModel="clr-namespace:GameSettings.MVVM.ViewModels"
+             x:DataType="ViewModel:LeagueViewModel"
              Title="">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to the Home Page!"
+        <HorizontalStackLayout>
+            <Label 
+            Text="Riot Client Path:"
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Center" >
+            </Label>
+            <Label 
+            Text="{Binding RiotClientPath}"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" >
+            </Label>
+        </HorizontalStackLayout>
+        <Button 
+            Text="Click Me"
+            Command="{Binding SelectRiotClientPathCommand}"
+                >
+        </Button>
     </VerticalStackLayout>
 </ContentPage> 
