Navigate to Detail Page

--- a/GameSettings/MVVM/Pages/ReleaseNotePage.xaml
+++ b/GameSettings/MVVM/Pages/ReleaseNotePage.xaml
@@ -11,6 +11,8 @@
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <Label Text="{Binding ReleaseNote.Title}"></Label>
     </VerticalStackLayout>
 
 </ContentPage>
