--- a/GameSettings/MVVM/Pages/MainPage.xaml
+++ b/GameSettings/MVVM/Pages/MainPage.xaml
@@ -4,9 +4,17 @@
              x:Class="GameSettings.MainPage"
              xmlns:ViewModel="clr-namespace:GameSettings.MVVM.ViewModels"
              xmlns:Model="clr-namespace:GameSettings.MVVM.Models"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              Title=""
              x:DataType="ViewModel:MainViewModel"
              >
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <toolkit:SelectedItemEventArgsConverter x:Key="SelectedItemEventArgsConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -20,17 +28,20 @@
                        FontSize="Medium" 
                        VerticalOptions="Center"
                        />
-            <!--<Button 
-            Text="Click Me"
-            Command="{Binding NavigateToRouteCommand}" 
-            CommandParameter="ReleaseNotePage"
-            />-->
         </StackLayout>
 
         <ListView ItemsSource="{Binding ReleaseNotes}"
                   Grid.Row="1"
                   Margin="10,0,0,0">
+            <ListView.Behaviors>
+                <toolkit:EventToCommandBehavior
+                    EventName="ItemSelected"
+                    Command="{Binding NavigateToRouteCommand}"
+                    EventArgsConverter="{StaticResource SelectedItemEventArgsConverter}"
+                 />
+            </ListView.Behaviors>
             <ListView.Header>
+
                 <StackLayout>
                     <Label Text="Release Notes"
                            FontSize="Large"
@@ -38,14 +49,8 @@
                 </StackLayout>
             </ListView.Header>
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="Model:ReleaseNote">
-                    <ViewCell>
-                        <!--<Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition></RowDefinition>
-                            </Grid.RowDefinitions>-->
-
+                <DataTemplate>
+                    <ViewCell x:DataType="Model:ReleaseNote">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -54,74 +59,30 @@
 
                             <StackLayout Orientation="Horizontal"
                                          Grid.Row="0"
-                                         Margin="0,15,0,0"
+                                         Margin="10,15,0,5"
                                          VerticalOptions="Center">
                                 <Label Text="{Binding ReleaseNoteVersion}" 
                                        FontSize="Medium"/>
                                 <Label Text="{Binding Title}" 
                                        Margin="5,0,0,0"
-                                       FontSize="Medium"/>
+                                       FontSize="Medium"
+                                      />
                             </StackLayout>
 
                             <Label Text="-"
                                    Grid.Row="1"
-                                   Margin="20,5,0,0"
-                                   FontSize="Small" />
+                                   Margin="30,10,0,0"
+                                   FontSize="Medium" 
+                                   FontAttributes="Bold"/>
                             <Label Text="{Binding ReleaseSummary.Headline}"
+                                   FontSize="Medium"
                                    Grid.Row="1"
-                                   Margin="30,5,0,0"
-                                   FontSize="Small"/>
+                                   Margin="45,10,0,0"
+                            />
                         </Grid>
-                        <!--<ListView ItemsSource="{Binding UserExperience.UiChanges}"
-                                      Grid.Row="1">
-                                <ListView.ItemTemplate>
-
-                                    <DataTemplate x:DataType="Model:UiChange">
-                                        <ViewCell>
-
-                                            <Label Text="XXXX"></Label>
-                                        </ViewCell>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>-->
-                        <!--</Grid>-->
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <!--<ScrollView Grid.Row="1" HorizontalScrollBarVisibility="Always">
-            <StackLayout >
-                <Label Text="Release Notes"
-                       Margin="10,0,0,0"
-                       FontSize="Medium" 
-                       FontAttributes="Bold"
-                       VerticalOptions="Center" 
-                       />
-                <Label 
-                       Text="Release 0.0.1" 
-                       Margin="10,20,0,0"
-                       FontSize="Medium" 
-                       VerticalOptions="Center"
-                >
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer 
-                            Command="{Binding NavigateToRouteCommand}"
-                            CommandParameter="ReleaseNotePage"/>
-                    </Label.GestureRecognizers>
-                </Label>
-                <Label  
-                       Text="- Improved the layout of the League of Legends Page"  
-                       Margin="10,20,0,0"
-                       FontSize="Medium" 
-                       VerticalOptions="Center" 
-                       />
-                <Label  
-                       Text="- Added more Settings to the League of Legends Page" 
-                       Margin="10,20,0,0"
-                       FontSize="Medium" 
-                       VerticalOptions="Center" 
-                       />
-            </StackLayout>
-        </ScrollView>-->
     </Grid>
 </ContentPage>
