--- a/GameSettings/MVVM/Pages/ReleaseNotePage.xaml
+++ b/GameSettings/MVVM/Pages/ReleaseNotePage.xaml
@@ -4,15 +4,45 @@
              x:Class="GameSettings.MVVM.Pages.ReleaseNotePage"
              xmlns:ViewModel="clr-namespace:GameSettings.MVVM.ViewModels"
              x:DataType="ViewModel:ReleaseNoteViewModel">
-    <VerticalStackLayout>
-    <Button Text="Go Back"
-            Command="{Binding NavigateBackCommand}"></Button>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
 
-        <Label Text="{Binding ReleaseNote.Title}"></Label>
-    </VerticalStackLayout>
+    <Grid Padding="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
+        <Button Text="Go Back"
+                WidthRequest="90"
+                HeightRequest="50"
+                Grid.Row="0"
+                Grid.Column="2"
+                HorizontalOptions="End"
+                Margin="0, 10, 10, 0"
+                Command="{Binding NavigateBackCommand}"/>
+
+        <StackLayout Orientation="Horizontal"
+                     Grid.Row="0"
+                     VerticalOptions="Center">
+            <Label Text="{Binding ReleaseNote.ReleaseNoteVersion}" 
+                   FontSize="Medium"
+                   FontAttributes="Bold"/>
+            <Label Text="{Binding ReleaseNote.Title}" 
+                   Margin="5,0,0,0"
+                   FontSize="Medium"/>
+        </StackLayout>
+
+        <Label Text="{Binding ReleaseNote.ReleaseSummary.Headline}" 
+               Grid.Row="1"
+               FontSize="Medium"
+               FontAttributes="Bold"/>
+        
+        <Label Text="{Binding ReleaseNote.ReleaseSummary.Content}" 
+               Grid.Row="2"
+               FontSize="Medium"/> 
+    </Grid>
 </ContentPage>
